--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-truffle-starter",
   "version": "0.0.0",
-  "description": "Gatsby starter with the Truffle Ethereum development framework Edit",
+  "description": "Gatsby starter with the Truffle Ethereum development framework",
   "main": "index.js",
   "repository": "git@github.com:rongierlach/gatsby-truffle-starter.git",
   "author": "Ron Gierlach <rongierlach@gmail.com>",
