--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "repository": "git@github.com:rongierlach/gatsby-truffle-starter.git",
   "author": "Ron Gierlach <rongierlach@gmail.com>",
   "license": "GPL-3.0",
+  "scripts": {
+    "dev": "gatsby develop -p 3000",
+    "build": "gatsby build"
+  },
   "dependencies": {
     "gatsby": "^1.6.5"
   }
