--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
     "build": "gatsby build"
   },
   "dependencies": {
-    "gatsby": "^1.6.5"
+    "bluebird": "^3.5.0",
+    "gatsby": "^1.6.5",
+    "gatsby-link": "^1.6.4",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "truffle-contract": "^2.0.5",
+    "web3": "^1.0.0-beta.15"
+  },
+  "devDependencies": {
+    "truffle": "^3.4.7"
   }
 }
