--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-link": "^1.6.5",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
-    "web3": "^1.0.0-beta.17"
+    "truffle-contract": "^2.0.5",
+    "web3": "^0.x.x"
   }
 }
